# Extended-Bones

./: CMakeLists.txt  README.md  run.cmd
Program/: .gitignore  CMakeLists.txt  compile.cmd  run.cmd
Program/examples/: helloworld.eb
Program/src/: lexer.cpp  location.cpp  main.cpp  utils.cpp
Program/src/includes/: lexer.h  location.h  main.h  utils.h
examples/: helloworld.eb
src/: lexer.cpp  main.cpp  token.cpp  utils.cpp
src/includes/: lexer.h  main.h  token.h  utils.h
